# chromascope

./: .cursorrules  .gitignore  AGENTS.md  CLAUDE.md  DEVLOG.md  KALIDESCOPE.MD  PRD.md  README.md  TODO.md  TODO_OPENUP.md  architecture.md  experiment.txt  pyproject.toml  sdlc.md  stress_test.sh
docs/: API_REFERENCE.md  CHEMICAL_CRYSTALLIZATION_PRD.md  CHEMICAL_RENDERER.md  CHROMASCOPE_DECAY_PRD.md  EXPERIMENT_GUIDE.md  FRACTAL_KALEIDOSCOPE.md  FRACTAL_KALEIDOSCOPE_PLAN.md  MANIFEST.md  SCHEMA_CHANGELOG.md  SOLAR.md  USER_GUIDE.md  architecture.md
docs/assets/showcase/audio/: manifest.json
frontend/: app.js  index.html  render-engine.js  server.py  styles.css
render/: cli.js
scripts/: chemical_showcase.py  generate_math_showcase_audio.py
src/audio_analysisussy/: __init__.py  cli.py  pipeline.py  render_video.py
src/audio_analysisussy/core/: __init__.py  analyzer.py  decomposer.py  polisher.py
src/audio_analysisussy/io/: __init__.py  exporter.py
src/audio_analysisussy/visualizers/: __init__.py  kaleidoscope.py
src/chromascope/: pipeline.py  render_video.py
src/chromascope/core/: analyzer.py  polisher.py
src/chromascope/experiment/: __init__.py  __main__.py  attractor.py  base.py  chemical.py  cli.py  colorgrade.py  decay.py  decay_cli.py  encoder.py  fractal.py  kaleidoscope.py  renderer.py  solar.py  solar_cli.py
src/chromascope/experimental/: __init__.py  universe.py
src/chromascope/io/: exporter.py
src/chromascope/visualizers/: kaleidoscope.py  styles.json
tests/: __init__.py  conftest.py  test_analyzer.py  test_caching.py  test_decomposer.py  test_exporter.py  test_pipeline.py  test_polisher.py  test_universe_experiment.py
tests/experiment/: test_chemical.py  test_colorgrade.py  test_decay.py  test_encoder.py  test_fractal.py  test_kaleidoscope.py  test_mixed_mode.py  test_renderer.py  test_solar.py
